Fix Gap on Tablet

--- a/working/index.css
+++ b/working/index.css
@@ -320,7 +320,7 @@ h3 {
 
     .pricing-boxes {
         display: flex;
-        gap: 32px;
+        gap: 65px;
         align-items: center;
         flex-direction: column;
     }
